# flo_draw

./: .gitignore  Cargo.toml  README.md
binding/: Cargo.toml  README.md
canvas/: Cargo.toml  README.md
canvas_events/: Cargo.toml
canvas_events/src/: draw_event.rs  draw_event_request.rs  draw_window_request.rs  key.rs  lib.rs  pointer_event.rs  render_request.rs
curves/: Cargo.toml  README.md
draw/: Cargo.toml  GUIDE.md  README.md
draw/examples/: bounce.rs  bounce_sprites.rs  canvas_window.rs  circle.rs  clip.rs  dashed_line.rs  erase.rs  follow_mouse.rs  gradient.rs  hello_world.rs  layer_alpha.rs  mandelbrot.rs  mascot.rs  mascot_dynamic_texture.rs  mascot_filter.rs  mascot_shadow.rs  mascot_sprite.rs  mascot_texture.rs  mirror_windows.rs  render_window.rs  render_window_double_resolve.rs  show_tessellation.rs  show_text_tessellation.rs  sprite.rs  text_layout.rs  texture.rs  texture_filters.rs  texture_from_sprite.rs  texture_from_sprite_dynamic.rs  texture_spin.rs  texture_sprites.rs  update_title.rs  vectoroids.rs  wibble.rs  wibble_dynamic_mascot.rs  wibble_mascot.rs
draw/src/: drawing_window.rs  lib.rs  render_window.rs  window_properties.rs
draw/src/draw_scene/: drawing_window_entity.rs  glutin_render_window_entity.rs  glutin_scene.rs  mod.rs  render_window_entity.rs  scene.rs  wgpu_render_window_entity.rs  wgpu_scene.rs
draw/src/glutin/: event_conversion.rs  glutin_runtime.rs  glutin_thread.rs  glutin_thread_event.rs  glutin_window.rs  mod.rs
draw/src/wgpu/: event_conversion.rs  mod.rs  winit_runtime.rs  winit_thread.rs  winit_thread_event.rs  winit_window.rs
draw/tests/: readme.rs
render/: Cargo.toml  build.rs
render/examples/: raw_wgpu_winit_circle.rs  raw_wgpu_winit_triangle.rs
render/shaders/filters/: alpha_blend.wgsl
render/shaders/simple/: simple.wgsl
render/shaders/texture/: gradient.wgsl  texture.wgsl
render/src/: lib.rs  profiler.rs
render/src/action/: blend_mode.rs  color.rs  identities.rs  mod.rs  render_action.rs  render_action_type.rs  render_target_type.rs  shader_type.rs  texture_filter.rs
render/src/buffer/: matrix.rs  mod.rs  vertex.rs
render/src/gl_renderer/: buffer.rs  error.rs  gl_renderer.rs  mod.rs  render_target.rs  shader.rs  shader_collection.rs  shader_program.rs  shader_uniforms.rs  standard_shader_programs.rs  texture.rs  vertex.rs  vertex_array.rs
render/src/metal_renderer/: bindings.rs  buffer.rs  convert.rs  matrix_buffer.rs  metal_renderer.rs  mod.rs  pipeline_configuration.rs  render_target.rs
render/src/offscreen/: error.rs  metal.rs  mod.rs  offscreen_trait.rs  opengl.rs  opengl_cgl_init.rs  opengl_egl_init.rs  opengl_wgl_init.rs  test.rs  wgpu_offscreen.rs
render/src/wgpu_renderer/: alpha_blend_filter.rs  blur_filter.rs  displacement_map_filter.rs  mask_filter.rs  mod.rs  pipeline.rs  pipeline_configuration.rs  reduce_filter.rs  render_pass_resources.rs  render_target.rs  renderer_state.rs  samplers.rs  shader_cache.rs  texture.rs  texture_settings.rs  to_buffer.rs  wgpu_renderer.rs  wgpu_shader.rs
render_canvas/: Cargo.toml
render_canvas/examples/: guide_illustrations.rs  png_mascot.rs  png_triangle.rs  raw_wgpu_winit.rs
render_canvas/src/: dynamic_texture_state.rs  fill_state.rs  layer_bounds.rs  layer_handle.rs  layer_state.rs  lib.rs  matrix.rs  offscreen.rs  render_entity.rs  render_entity_details.rs  render_gradient.rs  render_texture.rs  renderer_core.rs  renderer_layer.rs  renderer_stream.rs  renderer_worker.rs  resource_ids.rs  stroke_settings.rs  texture_filter_request.rs  texture_render_request.rs
render_canvas/src/canvas_renderer/: canvas_renderer.rs  mod.rs  tessellate_build_path.rs  tessellate_font.rs  tessellate_frame.rs  tessellate_gradients.rs  tessellate_layers.rs  tessellate_namespaces.rs  tessellate_path.rs  tessellate_properties.rs  tessellate_sprites.rs  tessellate_state.rs  tessellate_textures.rs  tessellate_transform.rs
render_canvas/tests/: render_tests.rs
render_software/: Cargo.toml
render_software/examples/: circle_to_png.rs  render_canvas_drawing.rs  software_basic.rs  software_mascot.rs  software_render_perf.rs  software_sprite.rs  software_texture.rs
render_software/src/: lib.rs
render_software/src/draw/: canvas_drawing.rs  drawing_state.rs  layer.rs  mod.rs  path.rs  pixel_programs.rs  prepared_layer.rs  renderer.rs  sprite.rs  stroke.rs  texture.rs  transform.rs
render_software/src/edgeplan/: edge_descriptor.rs  edge_descriptor_intercept.rs  edge_id.rs  edge_intercept_direction.rs  edge_plan.rs  edge_plan_intercept.rs  mod.rs  shape_descriptor.rs  shape_id.rs
render_software/src/edges/: bezier_subpath_edge.rs  clipping_edge.rs  contour_edge.rs  flattened_bezier_subpath_edge.rs  line_stroke_edge.rs  mod.rs  polyline_edge.rs  rectangle_edge.rs
render_software/src/pixel/: alpha_blend_trait.rs  f32_linear.rs  f32_linear_texture_reader.rs  gamma_lut.rs  mod.rs  pixel_program.rs  pixel_program_cache.rs  pixel_program_runner.rs  pixel_trait.rs  rgba_texture.rs  texture_reader.rs  to_gamma_colorspace_trait.rs  u32_fixed_point.rs  u32_linear.rs  u32_linear_texture_reader.rs  u8_rgba.rs
render_software/src/pixel_programs/: basic_sprite.rs  basic_texture.rs  blend.rs  mod.rs  solid_color.rs  source_over.rs  transformed_sprite.rs
render_software/src/render/: edge_plan.rs  edgeplan_region_renderer.rs  frame_size.rs  image_render.rs  mod.rs  render_frame.rs  render_slice.rs  render_source_trait.rs  render_target_trait.rs  renderer.rs  rgba_frame.rs  scanline_renderer.rs  terminal_render.rs  u8_frame_renderer.rs
render_software/src/scanplan/: buffer_stack.rs  mod.rs  pixel_scan_planner.rs  scan_planner.rs  scanline_intercept.rs  scanline_plan.rs  scanline_shard_intercept.rs  scanline_transform.rs  scanspan.rs  shard.rs  shard_scan_planner.rs
render_software/tests/: bezier_subpath_edge_tests.rs  canvas_render_tests.rs  clip_edge_tests.rs  edge_plan_render_tests.rs  f32_linear_pixel_tests.rs  pixel_planner_tests.rs  polyline_edge_tests.rs  scanline_plan_tests.rs  shard_scan_planner_tests.rs  shard_tests.rs  u32_linear_pixel_tests.rs
(+341 files in other folders)
