[workspace]
resolver = "2"
members = [
    "binding",
    "canvas",
    "canvas_events",
    "curves",
    "draw",
    "render",
    "render_canvas",
    "render_software",
    "render_gl_offscreen",
    "scene",
]


[workspace.dependencies]
flo_canvas = { path = "./canvas" }
flo_canvas_events = { path = "./canvas_events" }
flo_render = { path = "./render" }
flo_render_canvas = { path = "./render_canvas" }
flo_render_gl_offscreen = { path = "./render_gl_offscreen" }
flo_draw = { path = "./draw" }
flo_curves = { path = "./curves" }
flo_binding = { path = "./binding" }
flo_scene = { path = "./scene" }
desync = { path = "./desync" }
winit = "0.28"
once_cell = "1.18"
futures = "0.3"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5"
flo_stream = "0.7"
gl = "0.14"
smallvec = "1.11"
wide = "0.7"
flo_sparse_array = "0.1"
itertools = "0.11"
png = "0.17"
base64 = "0.21"
rayon = "1.7"
wgpu = "0.18"
wgpu-profiler = "0.15"
metal = "0.27"
cocoa = "0.25"

# allsorts is very slow when built for debug, so packages using flo_draw should consider optimising it even in debug builds
[profile.dev.package.allsorts]
opt-level = 2
