[package]
name = "flo_canvas_events"
version = "0.4.0"
authors = ["Andrew Hunter"]
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/Logicalshift/flo_draw"
description = "User input events for a flo_draw canvas"
categories = ["graphics", "rendering", "gui"]

[dependencies]
flo_canvas.workspace = true
flo_render.workspace = true
flo_scene.workspace = true
winit.workspace = true