[package]
name = "flo_draw"
version = "0.4.0"
authors = ["Andrew Hunter"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/Logicalshift/flo_draw"
description = "Hassle-free windowed 2D graphics rendering"
categories = ["graphics", "rendering", "gui"]

include = ["Cargo.toml", "src/**/*", "examples/**/*", "images/**/*", "guide_images/**/*", "GUIDE.md", "README.md"]

[features]
default = ["render-opengl"]
render-opengl = ["gl", "glutin", "glutin-winit", "raw-window-handle", "flo_render/opengl"]
render-wgpu = ["wgpu", "flo_render/render-wgpu"]
profile = ["flo_render/profile"]
wgpu-profiler = ["dep:wgpu-profiler", "flo_render/wgpu-profiler"]

[dependencies]
flo_canvas = { workspace = true, features = ["outline-fonts", "image-loading", "scenery"] }
flo_canvas_events = { workspace = true }
flo_render = { workspace = true, features = ["opengl"] }
flo_render_canvas.workspace = true
flo_stream = "0.7"
flo_binding.workspace = true
flo_scene.workspace = true
desync.workspace = true

once_cell = "1.18"
futures = "0.3"

glutin = { optional = true, version = "0.30" }
glutin-winit = { optional = true, version = "0.3" }
raw-window-handle = { optional = true, version = "0.5" }
gl = { optional = true, version = "0.14" }

winit = { version = "0.28" }
wgpu = { optional = true, version = "0.18" }
wgpu-profiler = { version = "0.15", optional = true }

[dev-dependencies]
flo_curves.workspace = true
rand = "0.8"
futures-timer = "3.0"
num-complex = "0.4"
rayon = "1.5"
