[package]
name = "flo_render_canvas"
version = "0.4.0"
authors = ["Andrew Hunter"]
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/Logicalshift/flo_draw"
description = "Converts flo_canvas streams to flo_render streams"
categories = ["graphics", "rendering", "rendering::engine"]

include = ["Cargo.toml", "src/**/*", "svg/**/*"]

[features]
opengl = ["flo_render/opengl"]
osx-metal = ["flo_render/osx-metal"]
render-wgpu = ["flo_render/render-wgpu"]
profile = ["flo_render/profile"]

scenery = ["flo_canvas/scenery"]

[dependencies]
flo_render.workspace = true
flo_canvas.workspace = true
flo_stream.workspace = true
futures.workspace = true
desync.workspace = true
lyon = "1.0"
num_cpus = "1.13"

[dev-dependencies]
png.workspace = true
once_cell.workspace = true
winit.workspace = true
