[package]
name = "flo_render_software"
version = "0.4.0"
authors = ["Andrew Hunter"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/Logicalshift/flo_draw"
description = "Software renderer for flo_canvas vector graphics"
categories = ["graphics", "rendering", "gui"]

[features]
default = ["render_png", "render_term", "multithreading"]
render_png = ["png"]
render_term = ["render_png", "base64"]
multithreading = ["rayon"]

[dependencies]
once_cell.workspace = true
smallvec.workspace = true
wide.workspace = true
flo_canvas.workspace = true
flo_sparse_array.workspace = true
itertools.workspace = true
png = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
flo_canvas = { workspace = true, features = ["image-loading"] }
